# SIRouters

./: CMakeLists.txt  README.md  qml.qrc
include/routers/: routers.h
qml/: SIRouters.qrc
qml/Routers/: Route.qml  Routers.qml  qmldir
qml/SIRouters/: qmldir
qml/SIRouters/si/Routers/: Routers.qml  qmldir
src/: routers.cpp
